# p90_drjcc

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  Makefile  README.md  mypy.ini  pyproject.toml  tox.ini
src/: also_x.py  base.py  bi_level.py  cvar.py  data_generator.py  drjcc.py  evaluate.py  main.py  misc.py  norms.py  plot.py  utils.py
src/__pycache__/: data_generator.compute_ev_consumption-32.py311.1.nbc  data_generator.compute_ev_consumption-32.py311.nbi  data_generator.compute_ev_consumption-33.py311.1.nbc  data_generator.compute_ev_consumption-33.py311.nbi  data_generator.compute_ev_consumption-35.py311.1.nbc  data_generator.compute_ev_consumption-35.py311.nbi  data_generator.compute_ev_consumption-37.py311.1.nbc  data_generator.compute_ev_consumption-37.py311.nbi  data_generator.compute_ev_consumption-38.py311.1.nbc  data_generator.compute_ev_consumption-38.py311.nbi
tex/: p90-figure0.md5  p90.aux  p90.bbl  p90.bcf  p90.blg  p90.fdb_latexmk  p90.fls  p90.tex
tex/_old/: p90.bbl  p90.bcf  p90.blg  p90.fdb_latexmk  p90.fls  p90.run.xml  p90.tex
tex/bibliography/: Bibliography.bib
tex/figures/: drjcc_bids.tikz  drjcc_bids_paper.tikz  drjcc_is_oos_flex.tikz  drjcc_oos_histograms_ALSO-X.tikz  drjcc_oos_histograms_CVaR.tikz  drjcc_oos_histograms_DRJCC.tikz  power_high_res_plot.tikz
tex/ieee/: ieee.aux  ieee.bbl  ieee.blg  ieee.fdb_latexmk  ieee.fls  ieee.out  ieee.tex
